# virtual_roam_2

./: README.md
install/: local_setup.sh  setup.sh
install/champ/share/champ/: local_setup.sh  package.bash  package.sh  package.zsh
install/champ_base/share/champ_base/: local_setup.sh  package.bash  package.sh  package.zsh
install/champ_msgs/share/champ_msgs/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/unitree_go2_description/share/unitree_go2_description/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/unitree_go2_description/share/unitree_go2_description/cmake/: unitree_go2_descriptionConfig.cmake
install/unitree_go2_description/share/unitree_go2_description/meshes/: L1_4D_Lidar.dae
install/unitree_go2_description/share/unitree_go2_description/urdf/: leg.xacro  lidar_4D_lidar.xacro  unitree_go2_gazebo.xacro  unitree_go2_robot.xacro
install/unitree_go2_description/share/unitree_go2_description/worlds/: default.sdf
install/unitree_go2_sim/share/unitree_go2_sim/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/unitree_go2_description/: CMakeLists.txt
src/unitree_go2_description/urdf/: velodyne.xacro
src/unitree_go2_description/worlds/: component.sdf  default.sdf  hc.mtl  scene.sdf
src/unitree_go2_sim/: CMakeLists.txt  package.xml
src/unitree_go2_sim/launch/: unitree_go2_launch.py
src/unitree_go2_sim/rviz/: rviz.rviz
(+166 files in other folders)
