<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>unitree_go2_description</name>
  <version>0.0.0</version>
  <description>unitree go2 robot description</description>
  <maintainer email="khaledgabr77@gmail.com">khaled</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  
  <exec_depend>gz_sim</exec_depend>
  <exec_depend>gz_ros2_control</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
